Implemented player exceptions